--- a/first-app/src/App.css
+++ b/first-app/src/App.css
@@ -3,8 +3,9 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
+  margin-bottom: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
