--- a/home-task-react-v1/src/components/GenreToggle/index.css
+++ b/home-task-react-v1/src/components/GenreToggle/index.css
@@ -1,5 +1,5 @@
 .genre-toggle_wrapper {
-    margin-bottom: 10px;
+    margin-bottom: 24px;
 }
 
 .genres_list {
@@ -7,12 +7,13 @@
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    gap: 10px;
-    padding-left: 0;
-    margin-left: 0;
+    column-gap: 30px;
+    padding: 0;
+    margin: 0;
 }
 
 .genre_item {
+    height: 42px;
     list-style-type: none;
     font-style: normal;
     font-weight: 500;
@@ -27,5 +28,5 @@
 }
 
 .genre_item.active {
-    border-bottom: 2px solid  #F65261;
+    border-bottom: 3px solid  #F65261;
 }
