--- a/home-task-react-v1/src/components/SearchInput/index.css
+++ b/home-task-react-v1/src/components/SearchInput/index.css
@@ -1,7 +1,8 @@
 .search-input_wrapper {
-    vertical-align: center;
-    margin-bottom: 10px;
+    margin: 0 auto;
+    height: 145px;
 }
+
 .search-input_header {
     font-family: Montserrat;
     font-style: normal;
@@ -12,10 +13,11 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: white;
+    margin: 0 0 38px;
 }
 
 .search-input_input {
-    width: 713px;
+    width: 673px;
     height: 57px;
     mix-blend-mode: normal;
     opacity: 70%;
@@ -25,11 +27,11 @@
     font-size: 20px;
     line-height: 24px;
     text-align: left;
+    padding: 0 20px;
     vertical-align: top;
-    mix-blend-mode: normal;
-    opacity: 30%;
     color: white;
     margin-right: 14px;
+    border: none;
 }
 
 .search-input_button {
