--- a/home-task-react-v1/src/components/CardPoster/CardPoster.css
+++ b/home-task-react-v1/src/components/CardPoster/CardPoster.css
@@ -24,6 +24,7 @@
     font-size: 14px;
     line-height: 17px;
     opacity: 0.5;
+    color: white;
     margin-block: 0;
     margin: 0 0 50px;
 }
