--- a/home-task-react-v1/src/components/AddMovie/AddMovie.css
+++ b/home-task-react-v1/src/components/AddMovie/AddMovie.css
@@ -135,3 +135,12 @@ form {
     border: none;
     color: #FFFFFF;
 }
+
+.add_movie-error {
+    color: white;
+    padding: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+}
