--- a/home-task-react-v1/src/components/MessageForm/MessageForm.css
+++ b/home-task-react-v1/src/components/MessageForm/MessageForm.css
@@ -18,6 +18,7 @@
 }
 
 .message-label {
+    width: 100%;
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
@@ -25,7 +26,7 @@
     line-height: 24px;
     text-align: center;
     color: #FFFFFF;
-    margin-bottom: 110px;
+    margin-bottom: 50px;
 }
 
 label.add_movie-button-submit {
