--- a/home-task-react-v1/src/index.css
+++ b/home-task-react-v1/src/index.css
@@ -5,3 +5,10 @@ body {
     justify-content: center;
     background-color: #555555;
 }
+
+.wrapper {
+    width: 1200px;
+    box-sizing: border-box;
+    padding: 20px 60px;
+    display: flex;
+}
