--- a/home-task-react-v1/src/components/ResultCount/ResultCount.module.css
+++ b/home-task-react-v1/src/components/ResultCount/ResultCount.module.css
@@ -1,4 +1,4 @@
-.results-count_label {
+.label {
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
@@ -8,6 +8,6 @@
     margin-bottom: 27px;
 }
 
-.results-count_label_bold {
+.labelBold {
     font-weight: 700;
 }
