--- a/home-task-react-v1/src/components/DetailsMovie/DetailsMovie.module.css
+++ b/home-task-react-v1/src/components/DetailsMovie/DetailsMovie.module.css
@@ -1,4 +1,4 @@
-.wrapper-details_movie {
+.wrapper {
   display: flex;
   position: sticky;
   top: 0;
@@ -9,21 +9,21 @@
   margin-bottom: 10px;
 }
 
-.wrapper-details_movie-card {
+.wrapperCard {
   padding-bottom: 10px;
   display: flex;
   flex-wrap: nowrap;
   gap: 60px;
 }
 
-.wrapper-details_movie-context {
+.wrapperContext {
   display: flex;
   flex-wrap: wrap;
   gap: 0;
   align-items: flex-start;
 }
 
-.details_movie-rating {
+.rating {
   width: 60px;
   height: 60px;
   border: 1px solid #FFFFFF;
@@ -40,7 +40,7 @@
   margin-left: 25px;
 }
 
-.details_movie-title {
+.title {
   height: 60px;
   font-family: Montserrat;
   font-style: normal;
@@ -54,13 +54,19 @@
   color: #FFFFFF;
 }
 
-.details_movie-genre {
+.genre {
   width: 100%;
   height: 17px;
-  margin-bottom: 30px;
+
+  font-size: 14px;
+  line-height: 17px;
+  opacity: 0.5;
+  color: white;
+  margin-block: 0;
+  margin: 0 0 30px;
 }
 
-.details_movie-textarea {
+.textarea {
   background: none;
   border: none;
   width: 100%;
@@ -74,4 +80,29 @@
   mix-blend-mode: normal;
   opacity: 0.5;
   resize: none;
+}
+
+.close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+}
+
+.label {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #F65261;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+  width: 490px;
+  margin: 0 0 30px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 13px;
 }
