--- a/home-task-react-v1/src/components/Header/Header.module.css
+++ b/home-task-react-v1/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-.header.wrapper {
+.header {
     position: sticky;
     top: 0;
     flex-wrap: wrap;
@@ -9,7 +9,7 @@
     background-color: #232323;
 }
 
-.header_add-movie {
+.addMovie {
     width: 177px;
     height: 46px;
     margin-bottom: 35px;
