--- a/home-task-react-v1/src/components/ResultsSort/ResultsSort.module.css
+++ b/home-task-react-v1/src/components/ResultsSort/ResultsSort.module.css
@@ -1,4 +1,4 @@
-.results-sort_header {
+.header {
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
@@ -10,7 +10,7 @@
     mix-blend-mode: normal;
 }
 
-.results-sort_list {
+.list {
     width: 150px;
     margin-left: 31px;
     font-family: Montserrat;
@@ -28,7 +28,7 @@
 
 }
 
-.result-sort-item {
+.item {
     background: #424242;
     border: none;
 }
