--- a/home-task-react-v1/src/components/AddMovie/AddMovie.module.css
+++ b/home-task-react-v1/src/components/AddMovie/AddMovie.module.css
@@ -79,36 +79,6 @@
     border: none;
 }
 
-/*.select > .react-select__control {
-    background: rgba(50, 50, 50, 0.948044);
-    mix-blend-mode: normal;
-    opacity: 0.8;
-    border-radius: 4px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 28px;
-    color: #FFFFFF;
-    border: none;
-    padding: 8px ;
-    width: 520px;
-    box-shadow: none;
-}
-
-.add_movie-select > .react-select__control:hover{
-    border: 1px solid white;
-}
-
-.react-select__multi-value, .react-select__multi-value__label, .react-select__menu-list {
-    background: rgba(50, 50, 50, 0.948044) !important;
-    color: #FFFFFF !important;
-}
-
-.react-select__option:hover {
-    color: black !important;
-}*/
-
 .secondColumn {
     width: 270px;
 }
@@ -160,4 +130,10 @@
     font-weight: 400;
     font-size: 8px;
     line-height: 10px;
+}
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 65px;
 }
