--- a/home-task-react-v1/src/components/Header/Header.module.css
+++ b/home-task-react-v1/src/components/Header/Header.module.css
@@ -7,6 +7,7 @@
     margin-bottom: 10px;
     z-index: 1;
     background-color: #232323;
+    background-image: url(./background-header.jpg);
 }
 
 .addMovie {
