--- a/home-task-react-v1/src/index.css
+++ b/home-task-react-v1/src/index.css
@@ -12,3 +12,33 @@ body {
     padding: 20px 60px;
     display: flex;
 }
+
+div.react-select__control {
+    background: rgba(50, 50, 50, 0.948044);
+    mix-blend-mode: normal;
+    opacity: 0.8;
+    border-radius: 4px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    color: #FFFFFF;
+    border: none;
+    padding: 8px ;
+    width: 520px;
+    box-shadow: none;
+}
+
+div.react-select__control:hover{
+    border: 1px solid white;
+}
+
+.react-select__multi-value, .react-select__multi-value__label, .react-select__menu-list {
+    background: rgba(50, 50, 50, 0.948044) !important;
+    color: #FFFFFF !important;
+}
+
+.react-select__option:hover {
+    color: black !important;
+}
