--- a/home-task-react-v1/src/components/EditButton/EditButton.module.css
+++ b/home-task-react-v1/src/components/EditButton/EditButton.module.css
@@ -1,11 +1,11 @@
-.edit-button,
-.edit-menu {
+.editButton,
+.editMenu {
     position: absolute;
     top: 16px;
     right: 16px;
 }
 
-.edit-menu {
+.editMenu {
     width: 190px;
     height: 110px;
     background: rgba(35, 35, 35, 0.918051);
@@ -19,12 +19,12 @@
     justify-content: flex-end;
 }
 
-.edit-menu_close {
+.editMenClose {
     padding-top: 7px;
     padding-right: 7px;
 }
 
-.edit-menu_button {
+.editMenuButton {
     font-family: Montserrat;
     font-style: normal;
     font-weight: normal;
@@ -40,7 +40,7 @@
     margin-bottom: 10px;
 }
 
-.edit-menu_button:hover {
+.editMenuButton:hover {
     background: #F65261;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1), 0px 10px 20px rgba(0, 0, 0, 0.1), 0px 10px 50px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(27.1828px);
